--- a/MatrixCalc/src/main/res/layout/activity_matrix.xml
+++ b/MatrixCalc/src/main/res/layout/activity_matrix.xml
@@ -12,8 +12,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:background="@drawable/abc_ab_bottom_solid_light_holo">
+        android:paddingRight="5dp" >
 
         <!-- TextView for title of the first matrix -->
         <TextView
