--- a/MatrixCalc/src/main/res/menu/main_activity_actions.xml
+++ b/MatrixCalc/src/main/res/menu/main_activity_actions.xml
@@ -3,4 +3,8 @@
     <item android:id="@+id/action_about"
         android:title="@string/action_about"
         android:showAsAction="never" />
+
+    <item android:id="@+id/action_example"
+        android:title="@string/action_example"/>
+
 </menu>
