Added a "home" view. It shows a basic TextView that will soon explain how to use and navigate the application.

--- a/MatrixCalc/src/main/res/layout/activity_home.xml
+++ b/MatrixCalc/src/main/res/layout/activity_home.xml
@@ -7,6 +7,6 @@
         android:layout_width="match_parent"
         android:layout_height="312dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="This is the root view"
+        android:text="\nThis is the home view. \nStuff about stuff will be stuffed here."
         android:id="@+id/sample_view" />
 </LinearLayout>
