--- a/MatrixCalc/src/main/res/layout/activity_binary_matrix.xml
+++ b/MatrixCalc/src/main/res/layout/activity_binary_matrix.xml
@@ -63,43 +63,44 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/a_time_b"
-        android:id="@+id/button"
+        android:id="@+id/a_times_b_button"
         android:layout_below="@+id/matrix_A"
         android:layout_alignParentStart="true"
-        android:layout_alignEnd="@+id/matrix_A" />
+        android:layout_alignEnd="@+id/matrix_A"
+        android:onClick="aTimesB" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/b_times_a"
-        android:id="@+id/button3"
-        android:layout_below="@+id/button"
+        android:id="@+id/b_times_a_button"
+        android:layout_below="@+id/a_times_b_button"
         android:layout_alignParentStart="true"
-        android:layout_alignEnd="@+id/button" />
+        android:layout_alignEnd="@+id/a_times_b_button" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/a_minus_b"
-        android:id="@+id/button5"
-        android:layout_below="@+id/button3"
+        android:id="@+id/a_minus_b_button"
+        android:layout_below="@+id/b_times_a_button"
         android:layout_alignParentStart="true"
-        android:layout_alignEnd="@+id/button3" />
+        android:layout_alignEnd="@+id/b_times_a_button" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/b_minus_a"
-        android:id="@+id/button6"
-        android:layout_below="@+id/button5"
+        android:id="@+id/b_minus_a_button"
+        android:layout_below="@+id/a_minus_b_button"
         android:layout_alignParentStart="true"
-        android:layout_alignEnd="@+id/button5" />
+        android:layout_alignEnd="@+id/a_minus_b_button" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/a_time_a"
-        android:id="@+id/button7"
+        android:id="@+id/b_times_b_button"
         android:layout_below="@+id/matrix_B"
         android:layout_alignEnd="@+id/matrix_B"
         android:layout_alignStart="@+id/matrix_B" />
@@ -109,10 +110,10 @@
         android:layout_height="wrap_content"
         android:text="@string/b_time_b"
         android:id="@+id/button8"
-        android:layout_below="@+id/button7"
-        android:layout_alignStart="@+id/button7"
-        android:layout_alignEnd="@+id/button7"
-        android:layout_above="@+id/button5" />
+        android:layout_below="@+id/b_times_b_button"
+        android:layout_alignStart="@+id/b_times_b_button"
+        android:layout_alignEnd="@+id/b_times_b_button"
+        android:layout_above="@+id/a_minus_b_button" />
 
     <!-- Button to get out calculation -->
 
