Added a translucent status bar. This take case of issue #1

--- a/MatrixCalc/src/main/res/values/styles.xml
+++ b/MatrixCalc/src/main/res/values/styles.xml
@@ -2,6 +2,28 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme"
-        parent="DefaultTheme">
+        parent="CustomActionBarTheme">
     </style>
+
+        <!-- Default theme for the app -->
+    <style name="DefaultTheme"
+        parent="@android:style/Theme.Holo.Light.DarkActionBar">
+    </style>
+
+    <!-- Custom theme -->
+    <style name="CustomActionBarTheme"
+        parent="@android:style/Theme.Holo.Light.DarkActionBar">
+        <item name="android:actionBarStyle">@style/MyActionBar</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">false</item>
+        <item name="android:windowBackground">@color/background</item>
+        <item name="android:fitsSystemWindows">true</item>
+    </style>
+
+    <!-- Custom ActionBar style -->
+    <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
+        <item name="android:background">@color/background</item>
+        <item name="android:fitsSystemWindows">true</item>
+    </style>
+
 </resources>
