--- a/MatrixCalc/src/main/res/layout/activity_home.xml
+++ b/MatrixCalc/src/main/res/layout/activity_home.xml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg"
     android:paddingStart="10dp"
-    android:paddingEnd="10dp">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/home_welcome"
-        android:id="@+id/home_textView1"
-        android:textSize="70sp"
-        android:gravity="center" />
+    android:paddingEnd="10dp"
+    android:fitsSystemWindows="true" >
 
     <TextView
         android:layout_width="wrap_content"
@@ -21,7 +14,18 @@
         android:id="@+id/textView4"
         android:textSize="20sp"
         android:layout_row="1"
-        android:layout_column="0" />
+        android:layout_column="0"
+        android:layout_gravity="center" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/home_welcome"
+        android:id="@+id/home_textView1"
+        android:textSize="70sp"
+        android:gravity="center"
+        android:layout_gravity="center_horizontal|top" />
 
 
-</GridLayout>
+</FrameLayout>
