--- a/MatrixCalc/src/main/res/layout/activity_home.xml
+++ b/MatrixCalc/src/main/res/layout/activity_home.xml
@@ -9,23 +9,22 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="320dp"
         android:text="@string/home_about"
-        android:id="@+id/textView4"
+        android:id="@+id/welcome_description"
+        android:fontFamily="sans-serif-condensed"
         android:textSize="20sp"
-        android:layout_row="1"
-        android:layout_column="0"
         android:layout_gravity="center" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-bold"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/home_welcome"
-        android:id="@+id/home_textView1"
+        android:id="@+id/welcome"
         android:textSize="70sp"
         android:gravity="center"
         android:layout_gravity="center_horizontal|top" />
-
 
 </FrameLayout>
