--- a/MatrixCalc/src/main/res/layout/activity_binary_matrix.xml
+++ b/MatrixCalc/src/main/res/layout/activity_binary_matrix.xml
@@ -1,9 +1,18 @@
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/bg"
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp"
+    android:fitsSystemWindows="true" >
+
 <!-- Changed to RelativeLayout for better handling of screen sizes -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:paddingLeft="5dp"
-    android:paddingRight="5dp" >
+    android:paddingRight="5dp"
+    android:fitsSystemWindows="true" >
 
     <!-- TextView for title of the first matrix -->
     <TextView
@@ -122,5 +131,5 @@
         android:onClick="bTimesB" />
 
     <!-- Button to get out calculation -->
-
 </RelativeLayout>
+</FrameLayout>
