--- a/MatrixCalc/src/main/res/layout/activity_home.xml
+++ b/MatrixCalc/src/main/res/layout/activity_home.xml
@@ -8,15 +8,6 @@
     android:fitsSystemWindows="true" >
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="320dp"
-        android:text="@string/home_about"
-        android:id="@+id/welcome_description"
-        android:fontFamily="sans-serif-condensed"
-        android:textSize="20sp"
-        android:layout_gravity="center" />
-
-    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-bold"
@@ -26,5 +17,14 @@
         android:textSize="70sp"
         android:gravity="center"
         android:layout_gravity="center_horizontal|top" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/home_about"
+        android:id="@+id/welcome_description"
+        android:fontFamily="sans-serif-condensed"
+        android:textSize="20sp"
+        android:layout_gravity="center" />
 
 </FrameLayout>
