--- a/MatrixCalc/src/main/res/layout/drawer_list_item.xml
+++ b/MatrixCalc/src/main/res/layout/drawer_list_item.xml
@@ -7,5 +7,6 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:textColor="#fff"
-    android:background="?android:attr/activatedBackgroundIndicator"
+    android:fontFamily="sans-serif-light"
+    android:background="@drawable/list_drawer_select"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"/>
