--- a/MatrixCalc/src/main/res/values/colors.xml
+++ b/MatrixCalc/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="background">#ff337266</color>
     <color name="bg">#FFC8C8C8</color>
+    <color name="text">#223E4C</color>
 </resources>
