--- a/MatrixCalc/src/main/res/values/styles.xml
+++ b/MatrixCalc/src/main/res/values/styles.xml
@@ -18,6 +18,7 @@
         <item name="android:windowTranslucentNavigation">false</item>
         <item name="android:windowBackground">@color/background</item>
         <item name="android:fitsSystemWindows">true</item>
+        <item name="android:activatedBackgroundIndicator">@drawable/list_drawer_select</item>
     </style>
 
     <!-- Custom ActionBar style -->
