--- a/MatrixCalc/src/main/res/drawable/list_drawer_select.xml
+++ b/MatrixCalc/src/main/res/drawable/list_drawer_select.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_activated="true" android:drawable="@color/text" />
-
+    <item android:state_activated="true" android:drawable="@color/bg_selected" />
     <item android:drawable="@android:color/transparent" />
 </selector>
