--- a/MatrixCalc/src/main/res/layout/activity_main.xml
+++ b/MatrixCalc/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
-        android:background="#829199" >
+        android:background="@color/bg" >
     </ListView>
 
 </android.support.v4.widget.DrawerLayout>
