Added a "Crouton test" button for my own testing purposes.

--- a/MatrixCalc/src/main/res/layout/activity_binary_matrix.xml
+++ b/MatrixCalc/src/main/res/layout/activity_binary_matrix.xml
@@ -140,5 +140,15 @@
         android:onClick="transposeB"
         android:layout_alignStart="@+id/transpose_a_button" />
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/test_button"
+        android:id="@+id/button"
+        android:layout_below="@+id/b_minus_a_button"
+        android:layout_alignParentStart="true"
+        android:onClick="croutonTest" />
+
     <!-- Button to get out calculation -->
 </RelativeLayout>
