--- a/MatrixCalc/src/main/res/layout/activity_binary_matrix.xml
+++ b/MatrixCalc/src/main/res/layout/activity_binary_matrix.xml
@@ -146,9 +146,19 @@
         android:layout_height="wrap_content"
         android:text="@string/test_button"
         android:id="@+id/button"
-        android:layout_below="@+id/b_minus_a_button"
+        android:onClick="croutonTest"
+        android:layout_below="@+id/transpose_b_button"
+        android:layout_alignEnd="@+id/transpose_b_button" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/a_plus_b"
+        android:id="@+id/button2"
+        android:layout_alignBottom="@+id/button"
+        android:layout_toLeftOf="@+id/transpose_b_button"
         android:layout_alignParentStart="true"
-        android:onClick="croutonTest" />
+        android:onClick="aPlusB" />
 
     <!-- Button to get out calculation -->
 </RelativeLayout>
