Aligned right side correctly for Binary Matrix activity.

--- a/MatrixCalc/src/main/res/layout/activity_binary_matrix.xml
+++ b/MatrixCalc/src/main/res/layout/activity_binary_matrix.xml
@@ -53,7 +53,8 @@
         android:gravity="top"
         android:textSize="15sp"
         android:layout_above="@+id/a_times_b_button"
-        android:layout_toRightOf="@+id/matrix_A">
+        android:layout_toRightOf="@+id/matrix_A"
+        android:layout_alignParentEnd="true">
 
         <requestFocus />
     </EditText>
