Changed duration, style, background of A plus B crouton when incorrect dimensions are entered

--- a/MatrixCalc/src/main/res/values/colors.xml
+++ b/MatrixCalc/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="drawer_bg">#ff9bacb6</color>
     <color name="text_black">#ff162733</color>
     <color name="bg_selected">#ff979797</color>
+    <color name="crouton_color">#FFB20037</color>
 
 </resources>
